[metadata]
name = access-om-expts
version = 0.1.0
author = Minghang Li
author_email = minghang.li1@anu.edu.au
description = A HPC-based experiment manager tool that manages ACCESS-OM2 or ACCESS-OM3 experiments.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/COSIMA/om3-scripts/expts_manager
license = Apache-2.0
[options]
install_requires = 

packages = find:
python_requires = >=3.10
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests
    docs
    build
    dist
    *.egg-info

[options.entry_points]
console_scripts =
    access-om-expts=access_om_expts.main:main

